Images lang array, and a CSS fix when the title-page is too long.

--- a/data/styleadmin.css
+++ b/data/styleadmin.css
@@ -126,6 +126,9 @@ h3 {
 .menudiv .title-page {
 	width: 350px;
 	font-size: 23px;
+	overflow: hidden;
+	/* This is CSS3 */
+	text-overflow: ellipsis;
 }
 
 .menudiv .title-module {
